<resources>
    <string name="app_name">SEG2105</string>
    <string name="CyclingSignUp">Cycling Club</string>
    <string name="CyclingParticipantSignup">Participant</string>
    <string name="title_activity_role_display">RoleDisplay</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="something">Email:</string>
    <string name="LoginPassword">Password:</string>
    <string name="RoleTEXT" />
    <string name="Usernametext">Username:</string>
    <string name="login_text">Log In</string>
    <string name="UserTypeSpin">Select User Type</string>
    <string name="RegisterText">Register</string>
    <string name="Welcome_text">Welcome! You are now logged in as </string>
    <string name="Admin_title">Admin</string>
    <string name="ClubOwner_title">Club Owner</string>
    <string name="Participant_title">Participant</string>
    <string name="LoginUsername">Username:</string>


    <string-array name="User_selection">
        <item>Club Owner</item>
        <item>Participant</item>
    </string-array>

    <string-array name="search_selection">
        <item>All</item>
        <item>Event Type</item>
        <item>Event Name</item>
        <item>Club Name</item>
    </string-array>

    <string-array name="EventProperties">
        <item>Type</item>
        <item>Level</item>
        <item>Location</item>
        <item>Pace</item>
        <item>Registration Fee</item>
        <item>Participant Limit</item>
    </string-array>

    <string name="title_activity_admin_user_management">AdminUserManagement</string>
    <string name="deleteusr">Delete User</string>
    <string name="selectedValue">Selected User:</string>
    <string name="deletetype">Delete Event Type</string>
    <string name="selectedType">Selected Type</string>
    <string name="NewType">New Type to add</string>
    <string name="renamebutton">Rename Type</string>
    <string name="selectedusr">Selected User</string>
    <string name="AddType">Add New Event Type</string>

    <string name="name_word">Name</string>
    <string name="add_new_event_type">Add New Event Type</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="create_account">Create Account</string>
    <string name="location">Location</string>
    <string name="diff_lvl">Difficulty Level</string>
    <string name="pace">Pace</string>
    <string name="reg_fee">Registration Fee</string>
    <string name="participant_limit">Participant Limit</string>
    <string name="event_details">Event Details</string>
    <string name="event_type">Event Type</string>
    <string name="event_name">Event Name</string>
    <string name="manage_usr">Manage Users</string>
    <string name="events">Events</string>
    <string name="add_event">Add Events</string>
    <string name="back">Back</string>
    <string name="event_types">Event Types</string>
    <string name="create_event">Create Event</string>
    <string name="create_evnt_text">Create an event!</string>
    <string name="admin_dash">Admin Dashboard!</string>
    <string name="welcome_to">Welcome to the</string>
    <string name="manage_usrs">Manage Users</string>
    <string name="manage_evnts">Manage Events</string>
    <string name="evnt_creation">Event Creation</string>
    <string name="route_planning">Route Planning</string>
    <string name="reg_manag">Registration Management</string>
    <string name="rslt_award">Results and Awards</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="type">Type</string>
    <string name="register">Register</string>
    <string name="spaces_left">Spaces Left:</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="delete_evnt">Delete Event</string>
    <string name="change_dtl">Change Detail</string>
    <string name="award">Award</string>
    <string name="result">Result</string>
    <string name="save_r_a">Save Results and Awards</string>
    <string name="new_value">New Value</string>
    <string name="selected_evnt">Selected Event</string>
    <string name="save_profile_info">Save Profile Information</string>
    <string name="club_name">Club Name</string>
    <string name="insta_link">Instagram Link</string>
    <string name="phone_num">Phone Number</string>
    <string name="contact_name">Contact Name</string>
    <string name="evnt_result">Place Finished</string>
    <string name="award_name">Award Name</string>
    <string name="award_details">Award Details</string>
    <string name="club_owner_dash">Club Owner Dashboard!</string>
    <string name="sign_up">Sign Up!</string>
    <string name="participant_username">Participant Username</string>
    <string name="place_fin">Place Finished</string>
    <string name="login_page_msg">Log back into your account! </string>
    <string name="manage_evnt">Manage your events</string>
    <string name="edt_profile">Edit your profile!</string>
    <string name="registration_status">Registration Status</string>



</resources>