<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cambridge_blue_l1"
    tools:context=".eventCreation">

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center|center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:fontFamily="@font/varela_round_regular"
            android:textColor="@color/cambridge_blue_d1"
            android:text="@string/create_evnt_text"
            android:textSize="35sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <EditText
                    android:id="@+id/eventName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/border_cambridge_blue_d1"
                    android:ems="10"
                    android:hint="@string/event_name"
                    android:inputType="text"
                    android:padding="10dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <Spinner
                    android:id="@+id/eventType"
                    android:layout_width="match_parent"
                    android:background="@drawable/border_cambridge_blue_d1"
                    android:layout_height="50dp"
                    android:padding="10dp"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <EditText
                    android:id="@+id/region"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/border_cambridge_blue_d1"
                    android:ems="10"
                    android:hint="@string/location"
                    android:inputType="text"
                    android:padding="10dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <EditText
                    android:id="@+id/level"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/border_cambridge_blue_d1"
                    android:ems="10"
                    android:hint="@string/diff_lvl"
                    android:inputType="text"
                    android:padding="10dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <EditText
                    android:id="@+id/pace"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/border_cambridge_blue_d1"
                    android:ems="10"
                    android:hint="@string/pace"
                    android:padding="10dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <EditText
                    android:id="@+id/RegFee"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/border_cambridge_blue_d1"
                    android:ems="10"
                    android:hint="@string/reg_fee"
                    android:inputType="text"
                    android:padding="10dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <EditText
                    android:id="@+id/participantlimit"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/border_cambridge_blue_d1"
                    android:ems="10"
                    android:hint="@string/participant_limit"
                    android:inputType="text"
                    android:padding="10dp" />

            </LinearLayout>

        </ScrollView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/createEventBtn"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="@string/create_event"
            android:backgroundTint="@color/cambridge_blue_d1"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/backbutton"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="@string/back"
            android:backgroundTint="@color/cambridge_blue"
            android:textColorHint="@color/white" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>