<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClubProfileEditor">

    <LinearLayout
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center|center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <Space
            android:layout_width="match_parent"
            android:layout_height="59dp" />

        <EditText
            android:id="@+id/ClubName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/text_border_1"
            android:ems="10"
            android:fontFamily="@font/varela_round_regular"
            android:hint="@string/club_name"
            android:padding="10dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="35dp" />

        <EditText
            android:id="@+id/InstagramLink"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/text_border_1"
            android:ems="10"
            android:fontFamily="@font/varela_round_regular"
            android:hint="@string/insta_link"
            android:padding="10dp" />

        <TextView
            android:id="@+id/Instatextval"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:textColor="@android:color/holo_red_dark" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <EditText
            android:id="@+id/ContactNumber"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="@string/phone_num"
            android:inputType="phone"
            android:fontFamily="@font/varela_round_regular"
            android:background="@drawable/text_border_1"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/ContactNumVal"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:textColor="@android:color/holo_red_dark" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <EditText
            android:id="@+id/ContactName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/text_border_1"
            android:ems="10"
            android:fontFamily="@font/varela_round_regular"
            android:hint="@string/contact_name"
            android:padding="10dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="35dp" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:text="@string/save_profile_info" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:text="@string/back" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>