<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageClubEvents">

    <LinearLayout
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/varela_round_regular"
            android:text="@string/manage_evnt"
            android:textSize="34sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <EditText
            android:id="@+id/ClubSelectedEvent"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/text_border_1"
            android:ems="10"
            android:hint="@string/selected_evnt"
            android:padding="10dp"
            android:inputType="text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <ListView
            android:background="@drawable/text_border_1"
            android:id="@+id/ClubEventView"
            android:layout_width="match_parent"
            android:layout_height="242dp">

        </ListView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />
        <Spinner
            android:id="@+id/Clubpropertyselect"
            android:background="@drawable/text_border_1"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="50dp"
            android:entries="@array/event_properties_entries" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <EditText
            android:id="@+id/ClubdetailValue"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/text_border_1"
            android:ems="10"
            android:padding="10dp"
            android:hint="@string/new_value"
            android:inputType="text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/ClubeditvalueBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_dtl"
            tools:ignore="VisualLintButtonSize" />

        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ClubdeleteEventBtn"
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:text="@string/delete_evnt"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/backBttn"
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:text="@string/back"
                tools:ignore="ButtonStyle,VisualLintBounds" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>