<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationManagement">

    <LinearLayout
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center|center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Spinner
            android:id="@+id/EventsSpinner"
            android:layout_width="match_parent"
            android:layout_height="76dp" />

        <TextView
            android:id="@+id/SpacesText"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:fontFamily="@font/varela_round_regular"
            android:text="@string/spaces_left"
            android:textSize="20sp" />

        <ListView
            android:id="@+id/UserList"
            android:layout_width="match_parent"
            android:layout_height="425dp"
            android:listSelector="@android:color/holo_blue_light"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/AcceptBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/accept"
                 />

            <Button
                android:id="@+id/DenyBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/deny" />
        </LinearLayout>

        <Button
            android:id="@+id/BackButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>