<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminManageUsers">

    <LinearLayout
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center|center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <EditText
            android:id="@+id/selecteduser"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:inputType="none"
            android:hint="@string/selectedusr" />

        <ListView
            android:id="@+id/UsersListView"
            android:layout_width="match_parent"
            android:layout_height="474dp"
            android:choiceMode="singleChoice"
            android:listSelector="@android:color/holo_blue_light" />

        <Button
            android:id="@+id/DeleteUsr"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/deleteusr"
            android:textColorHint="@color/white"/>
        <Button
            android:id="@+id/backButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/back"
            android:textColorHint="@color/white"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>