<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <LinearLayout
        android:id="@+id/signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <EditText
            android:id="@+id/LoginEmail"
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            tools:text="Email: " />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/Usernametext" />

        <EditText
            android:id="@+id/LoginPassword"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:ems="10"
            android:inputType="textPassword"
            tools:text="Password:" />

        <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkable="true"
                tools:text="@string/CyclingSignUp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkable="true"
                tools:text="@string/CyclingParticipantSignup" />
        </com.google.android.material.chip.ChipGroup>

        <Button
            android:id="@+id/btn_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Register" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>